Brands,nacitani aut nejdrazsich a nejlevnejsich, pridani Listu znacek

--- a/REAL_EshopProjectHosperger/REAL_EshopProjectHosperger.csproj
+++ b/REAL_EshopProjectHosperger/REAL_EshopProjectHosperger.csproj
@@ -28,4 +28,8 @@
     <None Include="Views\Car\Detail.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\brands\" />
+  </ItemGroup>
+
 </Project>
